--- a/Arduinopinic/templates/index.html
+++ b/Arduinopinic/templates/index.html
@@ -1,13 +1,23 @@
+{% load staticfiles %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <!-- Boostrap initialisation -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+  <link href="{% static 'bootstrap/css/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
+  <link href="{% static 'css/theme.css' %}" rel="stylesheet">
+  <script src="{% static 'bootstrap/js/ie-emulation-modes-warning.js' %}"></script>
+  <!-- Boostrap end of initialisation -->
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <link rel="icon" href="{% static 'img/favicon.ico' %}">
+  <title>Arduinopinic v{{ version }}</title>
 </head>
-
 <body>
 Hello World !
+  <!-- Boostrap JSinitialisation -->
+  <script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
+  <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
