--- a/Arduinopinic/templates/index.html
+++ b/Arduinopinic/templates/index.html
@@ -15,7 +15,27 @@
   <title>Arduinopinic v{{ version }}</title>
 </head>
 <body>
-Hello World !
+
+  <div class="container-fluid"> <!-- Main container -->
+    <div class="row"> <!-- row for header widgets and collapse button -->
+      <div class="col-sm-12 test4"><h3>Collapse 1 <a class="nlink" data-toggle="collapse" data-target="#pan_widget">&#10063;</a></h3></div>
+    </div>
+    <div class="row collapse in" id=pan_widget> <!-- row for widgets collpasable-->
+      <div class="col-sm-3 test1">{% lorem 2 p %}</div>
+      <div class="col-sm-3 test2">{% lorem 4 p %}</div>
+      <div class="col-sm-3 test3">{% lorem 3 p %}</div>
+      <div class="col-sm-3 test4">{% lorem 1 p %}</div>
+    </div>
+    <div class="row"> <!-- row for header webcam/graph and collapse button -->
+      <div class="col-sm-12 test4"><h3>Collapse 2 <a class="nlink" data-toggle="collapse" data-target="#pan_graph">&#10063;</a></h3></div>
+    </div>
+    <div class="row collapse in" id=pan_graph> <!-- row for webcam/graph collpasable-->
+      <div class="col-sm-6 test2">{% lorem 4 p %}</div>
+      <div class="col-sm-6 test3">{% lorem 1 p %}</div>
+    </div>
+  </div>
+
+
   <!-- Boostrap JSinitialisation -->
   <script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
   <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
