--- a/Arduinopinic/templates/index.html
+++ b/Arduinopinic/templates/index.html
@@ -41,11 +41,11 @@
     <div class="row"> <!-- row for header widgets and collapse button -->
       <div class="col-sm-12 test4"><h3>Collapse 1 <a class="nlink" data-toggle="collapse" data-target="#pan_widget">&#10063;</a></h3></div>
     </div>
-    <div class="row collapse in" id=pan_widget> <!-- row for widgets collpasable-->
-      <div class="col-sm-3 test1">{% lorem 2 p %}</div>
-      <div class="col-sm-3 test2">{% lorem 4 p %}</div>
-      <div class="col-sm-3 test3">{% lorem 3 p %}</div>
-      <div class="col-sm-3 test4">{% lorem 1 p %}</div>
+    <div class="row collapse in widgetrow" id=pan_widget> <!-- row for widgets collpasable-->
+      <div class="col-sm-3 widgetpan"><div class="widget" id=wtemp><span id=vtemp>N/A</span><br/>&#8451;</div></div>
+      <div class="col-sm-3 widgetpan"><div class="widget" id=whumid><span id=vhumid>N/A</span><br/>%</div></div>
+      <div class="col-sm-3 widgetpan"><div class="widget" id=weau><span id=veau>N/A</span><br/>&#8451;</div></div>
+      <div class="col-sm-3 widgetpan"><div class="widget" id=wlevel><span id=vlevel>N/A</span><br/></div></div>
     </div>
     <div class="row"> <!-- row for header webcam/graph and collapse button -->
       <div class="col-sm-12 test4"><h3>Collapse 2 <a class="nlink" data-toggle="collapse" data-target="#pan_graph">&#10063;</a></h3></div>
