Correction responsivness for small screens
Only 2 widgets per line
Changing a by button (link is not working on safari)
adapting button css

--- a/Arduinopinic/static/css/theme.css
+++ b/Arduinopinic/static/css/theme.css
@@ -2,6 +2,10 @@
 body {
   padding-top: 51px;
 }
+.nobtn {
+  background-color: transparent;
+  border: none;
+}
 /*#######################################
 Widget display
 ####################################### */
