--- a/Arduinopinic/templates/index.html
+++ b/Arduinopinic/templates/index.html
@@ -26,7 +26,7 @@
         </button>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar"> <!-- Part of nav bar collapsed if xd xs screen -->
-        <ul class="nav navbar-nav"> <!-- items on left of navbar -->
+        <ul class="nav navbar-nav navbar-left"> <!-- items on left of navbar -->
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Page 1</a></li>
           <li><a href="#">Page 2</a></li>
@@ -39,16 +39,16 @@
   </nav>
   <div class="container-fluid"> <!-- Main container -->
     <div class="row"> <!-- row for header widgets and collapse button -->
-      <div class="col-sm-12 test4"><h3>Collapse 1 <a class="nlink" data-toggle="collapse" data-target="#pan_widget">&#10063;</a></h3></div>
+      <div class="col-sm-12"><h3>Widgets <button class="nobtn" data-toggle="collapse" data-target="#pan_widget">&#10063;</button></h3></div>
     </div>
     <div class="row collapse in widgetrow" id=pan_widget> <!-- row for widgets collpasable-->
-      <div class="col-sm-3 widgetpan"><div class="widget" id=wtemp><span id=vtemp>N/A</span><br/>&#8451;</div></div>
-      <div class="col-sm-3 widgetpan"><div class="widget" id=whumid><span id=vhumid>N/A</span><br/>%</div></div>
-      <div class="col-sm-3 widgetpan"><div class="widget" id=weau><span id=veau>N/A</span><br/>&#8451;</div></div>
-      <div class="col-sm-3 widgetpan"><div class="widget" id=wlevel><span id=vlevel>N/A</span><br/></div></div>
+      <div class="col-sm-3 col-xs-6 widgetpan"><div class="widget" id=wtemp><span id=vtemp>N/A</span><br/>&#8451;</div></div>
+      <div class="col-sm-3 col-xs-6 widgetpan"><div class="widget" id=whumid><span id=vhumid>N/A</span><br/>%</div></div>
+      <div class="col-sm-3 col-xs-6 widgetpan"><div class="widget" id=weau><span id=veau>N/A</span><br/>&#8451;</div></div>
+      <div class="col-sm-3 col-xs-6 widgetpan"><div class="widget" id=wlevel><span id=vlevel>N/A</span><br/></div></div>
     </div>
     <div class="row"> <!-- row for header webcam/graph and collapse button -->
-      <div class="col-sm-12 test4"><h3>Collapse 2 <a class="nlink" data-toggle="collapse" data-target="#pan_graph">&#10063;</a></h3></div>
+      <div class="col-sm-12"><h3>Monitoring <button class="nobtn" data-toggle="collapse" data-target="#pan_graph">&#10063;</button></h3></div>
     </div>
     <div class="row collapse in" id=pan_graph> <!-- row for webcam/graph collpasable-->
       <div class="col-sm-6 test2">{% lorem 4 p %}</div>
