Adding alert box function
Implementing container for alert
Small css definition
JS function to allow easy pop up

--- a/Arduinopinic/static/css/theme.css
+++ b/Arduinopinic/static/css/theme.css
@@ -7,6 +7,12 @@ body {
   border: none;
 }
 /*#######################################
+alert box display
+####################################### */
+#alert_box {
+  margin-top: 10px;
+}
+/*#######################################
 Widget display
 ####################################### */
 .widgetrow {
