update css collapse button
removing outline

--- a/Arduinopinic/static/css/theme.css
+++ b/Arduinopinic/static/css/theme.css
@@ -2,9 +2,10 @@
 body {
   padding-top: 51px;
 }
-.nobtn {
+.nobtn, .nobtn:focus {
   background-color: transparent;
   border: none;
+  outline: none;
 }
 /*#######################################
 alert box display
