--- a/Arduinopinic/static/css/theme.css
+++ b/Arduinopinic/static/css/theme.css
@@ -6,6 +6,7 @@ body {
   background-color: transparent;
   border: none;
   outline: none;
+  padding: 0px;
 }
 /*#######################################
 alert box display
