fixing wrong css variable
Tabs were not functionning properly

--- a/Arduinopinic/templates/index.html
+++ b/Arduinopinic/templates/index.html
@@ -71,7 +71,7 @@
             <h3>HOME</h3>
             <p>Some content.</p>
           </div>
-          <div id="7j" class="tab-pane fade">
+          <div id="7d" class="tab-pane fade">
             <h3>Menu 1</h3>
             <p>Some content in menu 1.</p>
           </div>
