--- a/Arduinopinic/templates/index.html
+++ b/Arduinopinic/templates/index.html
@@ -32,7 +32,7 @@
           <li><a href="#">Page 2</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right"> <!-- items on right of navbar -->
-          <li><a href="#" id=vstatus>Daemon status : <font  id=vstatus style="font-size: 22px;color:green;">&#9673; </font></a></li>
+          <li><a href="#">Daemon status : <font  id=vstatus style="font-size: 22px;color:green;">&#9673; </font></a></li>
         </ul>
       </div>
     </div>
@@ -88,6 +88,7 @@
   <!-- Boostrap JSinitialisation -->
   <script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
   <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+  <script>updateURL='{% url "Widgets" %}'</script>
   <script src="{% static 'js/basics.js' %}"></script>
 </body>
 </html>
