--- a/Arduinopinic/templates/index.html
+++ b/Arduinopinic/templates/index.html
@@ -89,6 +89,7 @@
   <script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
   <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
   <script>updateURL='{% url "Widgets" %}'</script>
+  <script src="{% static 'js/moment-with-locales.js' %}"></script>
   <script src="{% static 'js/basics.js' %}"></script>
 </body>
 </html>
