Implementing Chart update function
- small css implementation for spinner
- include of Chart.js library
- in index.html : creating di(spinnerx and graphx) and creating 3 instance of Chart.js
- views/url : creating view with parameters to retrieve data's from tab and transmit via json
- creatin Jquery ajax function updating charts when ajax success

--- a/Arduinopinic/static/css/theme.css
+++ b/Arduinopinic/static/css/theme.css
@@ -63,6 +63,15 @@ Webcam display
   margin-bottom: 10px;
 
 }
+#spinner1, #spinner2, #spinner3 {
+  position: absolute;
+  top:48%;
+  left: 48%;
+}
+#d24h, #d7, #d30 {
+  min-height: 300px;
+}
+
 /*#######################################
 test 1 -> 4 is for debugging grid
 ####################################### */
