Chart tooltip update
all datas of the same y axis are now displayed

--- a/Arduinopinic/templates/index.html
+++ b/Arduinopinic/templates/index.html
@@ -133,6 +133,9 @@
   // Configuration options go here
   options: {
     maintainAspectRatio: true,
+    tooltips: {
+      mode: 'index',
+    },
     scales: {
       yAxes: [{
         type: 'linear', // only linear but allow scale type registration. This allows extensions to exist solely for log scale for instance
@@ -195,6 +198,9 @@ var basicgraph2 = {
 // Configuration options go here
 options: {
   maintainAspectRatio: true,
+  tooltips: {
+    mode: 'index',
+  },
   scales: {
     yAxes: [{
       type: 'linear', // only linear but allow scale type registration. This allows extensions to exist solely for log scale for instance
@@ -257,6 +263,9 @@ var basicgraph3 = {
 // Configuration options go here
 options: {
   maintainAspectRatio: true,
+  tooltips: {
+    mode: 'index',
+  },
   scales: {
     yAxes: [{
       type: 'linear', // only linear but allow scale type registration. This allows extensions to exist solely for log scale for instance
