--- a/Arduinopinic/static/css/theme.css
+++ b/Arduinopinic/static/css/theme.css
@@ -38,6 +38,20 @@ Widget display
   padding-top: 41px;
   color:#f49542;
 }
+.widgetpan .widgetlevel {
+  display: inline-block;
+  background-color: white;
+  border-radius: 50%;
+  height:150px;
+  width:150px;
+  border-color: #f49542;
+  border-style: solid;
+  border-width: 7px;
+  vertical-align:middle;
+  text-align:center;
+  padding-top: 46px;
+  color:#f49542;
+}
 .widgetpan .widget span {
   font-size: 40px;
   text-align:center;
@@ -74,7 +88,22 @@ Graph tab display
 #d24h, #d7, #d30 {
   min-height: 300px;
 }
-
+/*#######################################
+Level bar
+####################################### */
+.vertical {
+  display: inline-block;
+  width: 70%;
+  height: 40%;
+  -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
+  transform: rotate(-90deg);
+}
+.vertical {
+  box-shadow: inset 0px 4px 6px #ccc;
+}
+.progress-bar {
+  box-shadow: inset 0px 4px 6px rgba(100,100,100,0.6);
+}
 /*#######################################
 test 1 -> 4 is for debugging grid
 ####################################### */
