--- a/Arduinopinic/templates/listing.html
+++ b/Arduinopinic/templates/listing.html
@@ -48,7 +48,7 @@
       <h2>List of measures</h2>
     </div>
     <div class="row">
-      <button type="button" class="btn btn-success">Export to csv</button><br/>
+      <a class="btn btn-success" href='{% url "csvexport" %}'>Export to csv</a><br/>
       <ul class="pagination">
         {% if page_obj.has_previous %}
         <li><a href='{% url "Listing" page=page_obj.previous_page_number %}'>&laquo;</a></li>
