--- a/Arduinopinic/templates/index.html
+++ b/Arduinopinic/templates/index.html
@@ -1,42 +1,5 @@
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <!-- Boostrap initialisation -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-  <link href="{% static 'bootstrap/css/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
-  <link href="{% static 'css/theme.css' %}" rel="stylesheet">
-  <script src="{% static 'bootstrap/js/ie-emulation-modes-warning.js' %}"></script>
-  <!-- Boostrap end of initialisation -->
-
-  <link rel="icon" href="{% static 'img/flavicon.png' %}">
-  <title>Arduinopinic v{{ version }}</title>
-</head>
-<body>
-  <nav class="navbar navbar-inverse navbar-fixed-top"> <!-- Def of navbar : Inversed color - fixed to top of screen -->
-    <div class="container-fluid"> <!-- container so that nav bar fit to all screen -->
-      <div class="navbar-header"> <!-- Brand name and button for xs screen -->
-        <a class="navbar-brand" href="#"><img src="{% static 'img/flavicon.png' %}" width="30" height="30" alt="Arduinopinic"></a>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"> <!-- Toggle button if xs screen -->
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar"> <!-- Part of nav bar collapsed if xd xs screen -->
-        <ul class="nav navbar-nav navbar-left"> <!-- items on left of navbar -->
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="{% url "Listing" page=1 %}">Metrics</a></li>
-          <li><a href="#">Page 2</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right"> <!-- items on right of navbar -->
-          <li><a href="#">Daemon status : <font  id=vstatus style="font-size: 22px;color:green;">&#9673; </font></a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+{% include 'header.html' %}
   <div class="container-fluid"> <!-- Main container -->
     <div class="row"> <!-- row for alerts to be popup -->
       <div class="container">
